k8s/midtier-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mid-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mid-nodejs
  template:
    metadata:
      labels:
        app: mid-nodejs
    spec:
      containers:
      - name: mid-nodejs
        image: leapfse4.jfrog.io/fse4team3/some-id-middle-tier:v4.2
        ports:
        - containerPort: 3002
      imagePullSecrets:
        - name: some-id-secret
---
apiVersion: v1
kind: Service
metadata:
  name: mid-nodejs
spec:
  type: ClusterIP
  selector:
    app: mid-nodejs
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
