k8s/spring-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: leapfse4.jfrog.io/fse4team3/some-id-backend:v4.2
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: some-id-secret
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  type: ClusterIP
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
